# chanlunInvester

./: .alert_state.json  .confirmation_state.json  .gitignore  ARCHITECTURE.md  BRANCH_MANAGEMENT_SUMMARY.md  BUGFIX_2026-03-18.md  BUY1_CHECK_FIX_2026-04-16.md  CENTER_FIX_2026-04-16.md  CENTER_MOMENTUM_DEVELOPMENT_REPORT.md  CENTER_MOMENTUM_INTEGRATION_PLAN.md  CHANLUN_V2_DETAILED_PLAN.md  CHANLUN_V2_FINAL_SUMMARY_2026-04-16.md  CHANLUN_V2_PROGRESS_SUMMARY_2026-04-16.md  CLAUDE.md  Cargo.toml  DEVELOPMENT_PLAN.md  Dockerfile.python  Dockerfile.rust  GANTT_CHART.md  GAP_ANALYSIS.md  GAP_ANALYSIS_UPDATED.md  GITHUB_PUSH_READY.md  GITHUB_UPLOAD_REPORT.md  HOT_STOCKS_CRON_FIX_2026-04-16.md  HOT_STOCKS_POOL_METHODOLOGY.md  HOT_STOCKS_REPORT_SETUP.md  HOT_STOCKS_RESONANCE_EXPLAINED.md  INTC_MONITOR_SETUP.md  IONQ_MONITOR_SETUP.md  MIGRATION_REPORT.md  MONITORING_REPORT_2026-04-16_1300.md  PHASE1_PROGRESS_REPORT_2026-04-16.md  PHASE1_VERIFICATION_CHECKLIST.md  PREMARKET_ALERT_FEATURE.md  PRICE_ALERT_CONFIG.md  PUSH_NOW.sh  PUSH_TO_GITHUB.md  QUICK_REFERENCE.md  README.md  RELEASE_NOTES_V2.0_BETA.md  (+66 more)
.openclaw/: workspace-state.json
.planning/: CHANLUN_V2_PLAN.md  CHANLUN_V2_PLAN_UPDATE_2026-04-16.md  DECISIONS.md  PHASE1_COMPLETE_SUMMARY.md  PHASE2_COMPLETE_SUMMARY.md  PHASE2_PLAN.md  PHASE2_PROGRESS_2026-04-16.md  PHASE3_COMPLETE_SUMMARY.md  PHASE3_PLAN.md  PHASE3_PROGRESS_2026-04-16.md  PHASE4_PLAN.md  PHASE5_PLAN.md  PHASE6_PLAN.md  TASK_BACKTEST_2026-04-16.md  TODOS.md
chanlun/: BUSINESS_MODEL.md  COMPETITIVE_ANALYSIS.md  LEAN_ANALYSIS.md  LEAN_IMPROVEMENT_PLAN.md  LOCAL_DEPLOYMENT.md  LOCAL_DEPLOYMENT_V2.md  MONITOR_README.md  PHASE4_COMPLETE.md  PHASE5_PLAN.md  (+21 more)
python-layer/: generate_proto.sh  pyproject.toml  requirements.txt  test_integration.py
python-layer/trading_system/: __init__.py  backtest.py  center.py  center_cycle.py  center_momentum.py  center_momentum_confidence.py  client.py  fractal.py  kline.py  segment.py  trend_segment.py
rust-core/: Cargo.toml  build.rs
rust-core/src/: lib.rs  main.rs
rust-core/src/bsp/: mod.rs
rust-core/src/divergence/: mod.rs
rust-core/src/fractal/: mod.rs
rust-core/src/grpc/: mod.rs
rust-core/src/health/: mod.rs
rust-core/src/indicators/: mod.rs
rust-core/src/kline/: mod.rs
rust-core/src/metrics/: mod.rs
rust-core/src/monitor/: mod.rs
rust-core/src/pen/: mod.rs
rust-core/src/segment/: mod.rs
(+297 files in other folders)
